--- a/css/layout.css
+++ b/css/layout.css
@@ -326,84 +326,84 @@ ul#nav li.current a { color: #11ABB0; }
 }
 
 .analytics {
-  	width: 100%;
+  	width: 60%;
   	-moz-animation: analytics 2s ease;
   	-webkit-animation: analytics 2s ease;
 }
-.AI {
-  	width: 100%;
-  	-moz-animation: AI 2s ease;
-  	-webkit-animation: AI 2s ease;
+.illustrator {
+  	width: 55%;
+  	-moz-animation: illustrator 2s ease;
+  	-webkit-animation: illustrator 2s ease;
 }
-.stats {
-  	width: 70%;
-  	-moz-animation: stats 2s ease;
-  	-webkit-animation: stats 2s ease;
+.wordpress {
+  	width: 50%;
+  	-moz-animation: wordpress 2s ease;
+  	-webkit-animation: wordpress 2s ease;
 }
-.cloud {
-  	width: 60%;
-  	-moz-animation: cloud 2s ease;
-  	-webkit-animation: cloud 2s ease;
+.css {
+  	width: 90%;
+  	-moz-animation: css 2s ease;
+  	-webkit-animation: css 2s ease;
 }
-.python {
-  	width: 100%;
-  	-moz-animation: python 2s ease;
-  	-webkit-animation: python 2s ease;
-}
-.SQL {
+.html5 {
   	width: 80%;
-  	-moz-animation: SQL 2s ease;
-  	-webkit-animation: SQL 2s ease;
+  	-moz-animation: html5 2s ease;
+  	-webkit-animation: html5 2s ease;
+}
+.jquery {
+  	width: 50%;
+  	-moz-animation: jquery 2s ease;
+  	-webkit-animation: jquery 2s ease;
 }
 
 @-moz-keyframes analytics {
   0%   { width: 0px;  }
-  100% { width: 100%;  }
-}
-@-moz-keyframes AI {
-  0%   { width: 0px;  }
-  100% { width: 100%;  }
-}
-@-moz-keyframes stats {
-  0%   { width: 0px;  }
-  100% { width: 70%;  }
-}
-@-moz-keyframes cloud {
-  0%   { width: 0px;  }
   100% { width: 60%;  }
 }
-@-moz-keyframes python {
+@-moz-keyframes illustrator {
   0%   { width: 0px;  }
-  100% { width: 100%;  }
+  100% { width: 55%;  }
 }
-@-moz-keyframes SQL {
+@-moz-keyframes wordpress {
+  0%   { width: 0px;  }
+  100% { width: 50%;  }
+}
+@-moz-keyframes css {
+  0%   { width: 0px;  }
+  100% { width: 90%;  }
+}
+@-moz-keyframes html5 {
   0%   { width: 0px;  }
   100% { width: 80%;  }
+}
+@-moz-keyframes jquery {
+  0%   { width: 0px;  }
+  100% { width: 50%;  }
 }
 
 @-webkit-keyframes analytics {
   0%   { width: 0px;  }
-  100% { width: 100%;  }
-}
-@-webkit-keyframes AI {
-  0%   { width: 0px;  }
-  100% { width: 100%;  }
-}
-@-webkit-keyframes stats {
-  0%   { width: 0px;  }
-  100% { width: 70%;  }
-}
-@-webkit-keyframes cloud {
-  0%   { width: 0px;  }
   100% { width: 60%;  }
 }
-@-webkit-keyframes python {
+@-webkit-keyframes illustrator {
   0%   { width: 0px;  }
-  100% { width: 100%;  }
+  100% { width: 55%;  }
 }
-@-webkit-keyframes SQL {
+@-webkit-keyframes wordpress {
+  0%   { width: 0px;  }
+  100% { width: 50%;  }
+}
+@-webkit-keyframes css {
+  0%   { width: 0px;  }
+  100% { width: 90%;  }
+}
+@-webkit-keyframes html5 {
   0%   { width: 0px;  }
   100% { width: 80%;  }
+}
+@-webkit-keyframes jquery {
+  0%   { width: 0px;  }
+  100% { width: 50%;  }
 }
 
 /* ------------------------------------------------------------------ */
